--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arhsen.net</title>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpeg" />
-    <meta name="description" content="arshen charity foundation" />
-    <meta name="keywords" content="arshen, arshen.am, բարերար, բարեգործություն, baregortsutyun, baregorcutyun">
-    <meta name="robots" content="index, follow"/>
-    <link rel="canonical" href="https://arshen.net/" />
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Exo:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+IN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  </head>
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Arhsen.net</title>
+        <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpeg" />
+        <link rel="preload" href="/fonts/poppins-v24-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+        <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; 
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com; 
+      style-src 'self' 'unsafe-inline'; 
+      font-src 'self' data:; 
+      img-src 'self' data: https://www.googletagmanager.com https://maps.gstatic.com https://maps.googleapis.com; 
+      connect-src 'self' ws://localhost:* http://localhost:* https://www.googletagmanager.com https://www.google-analytics.com; 
+      frame-src 'self' https://www.google.com https://*.google.com;">
+      <link rel="preload" as="image" href="/src/assets/logo.jpeg" fetchpriority="high">
+    <link rel="preload" href="/fonts/exo-v25-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/exo-2-v26-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+            <meta name="description" content="arshen charity foundation" />
+            <meta name="keywords" content="arshen, arshen.am, բարերար, բարեգործություն, baregortsutyun, baregorcutyun">
+            <meta name="robots" content="index, follow"/>
+            <link rel="canonical" href="https://arshen.net/" />
+    <meta name="google-site-verification" content="0J7Hfdj0vc2VyaxBtzYEikqhWHGHoX-ZP_Sah-GjdCE" />
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M3GHC2KT');</script>
+      </head>
   <body>
     <div id="root"></div>
     <script type="module" crossorigin src="/src/main.jsx"></script>
-    
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3GHC2KT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </body>
 </html>
