--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
             <meta name="robots" content="index, follow"/>
             <link rel="canonical" href="https://arshen.net/" />
     <meta name="google-site-verification" content="0J7Hfdj0vc2VyaxBtzYEikqhWHGHoX-ZP_Sah-GjdCE" />
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+    
+      <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-M3GHC2KT');</script>
+    })(window,document,'script','dataLayer','GTM-M3GHC2KT');</script> -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D253EYYFHB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-D253EYYFHB');
+    </script>
+    
       </head>
   <body>
     <div id="root"></div>
