--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Arhsen.net</title>
-        <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpeg" />
+        <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpg" />
         <link rel="preload" href="/fonts/poppins-v24-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
         <meta http-equiv="Content-Security-Policy" 
       content="default-src 'self'; 
@@ -14,7 +14,7 @@
       img-src 'self' data: https://www.googletagmanager.com https://maps.gstatic.com https://maps.googleapis.com; 
       connect-src 'self' ws://localhost:* http://localhost:* https://www.googletagmanager.com https://www.google-analytics.com; 
       frame-src 'self' https://www.google.com https://*.google.com;">
-      <link rel="preload" as="image" href="/src/assets/logo.jpeg" fetchpriority="high">
+      <link rel="preload" as="image" href="/src/assets/logo.jpg" fetchpriority="high">
     <link rel="preload" href="/fonts/exo-v25-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/fonts/exo-2-v26-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
             <meta name="description" content="arshen charity foundation" />
